--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -344,4 +344,7 @@
     <string name="work_mode_off_label">Notifications and apps are off</string>
     <string name="bottom_work_tab_user_education_close_button">Close</string>
     <string name="bottom_work_tab_user_education_closed">Closed</string>
+
+    <string name="desktop_show_label_title">Show Labels</string>
+    <string name="desktop_show_label_summary">Show item labels below their icons.</string>
 </resources>
